--- a/examples/math_dataset/configs/optimizer_config.json
+++ b/examples/math_dataset/configs/optimizer_config.json
@@ -11,7 +11,7 @@
             "API_KEY": "",
             "API_BASE": "",
             "temperature": 0.3,
-            "model": "gpt-4-turbo-2024-04-09",
+            "model": "gpt-4o-2024-08-06",
             "SAVE_LOGS": false,
             "log_path": "logs/trainer_god"
         },
@@ -44,7 +44,7 @@
             "API_KEY": "",
             "API_BASE": "",
             "temperature": 0.3,
-            "model": "gpt-4-turbo-2024-04-09",
+            "model": "gpt-4o-2024-08-06",
             "SAVE_LOGS": false,
             "log_path": "logs/trainer_god"
         },
@@ -85,7 +85,7 @@
             "API_KEY": "",
             "API_BASE": "",
             "temperature": 0.3,
-            "model": "gpt-4-turbo-2024-04-09",
+            "model": "gpt-4o-2024-08-06",
             "SAVE_LOGS": false,
             "log_path": "logs/trainer_god"
         },
@@ -132,7 +132,7 @@
             "API_KEY": "",
             "API_BASE": "",
             "temperature": 0.3,
-            "model": "gpt-4-turbo-2024-04-09",
+            "model": "gpt-4o-2024-08-06",
             "SAVE_LOGS": false,
             "log_path": "logs/trainer_god"
         },
