--- a/examples/debate/config.json
+++ b/examples/debate/config.json
@@ -20,7 +20,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/A1"
                 },
                 "toolkit": {},
@@ -39,7 +39,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/A2"
                 },
                 "toolkit": {},
@@ -58,7 +58,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/A3"
                 },
                 "toolkit": {},
@@ -77,7 +77,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/N1"
                 },
                 "toolkit": {},
@@ -96,7 +96,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/N2"
                 },
                 "toolkit": {},
@@ -115,7 +115,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/N3"
                 },
                 "toolkit": {},
@@ -134,7 +134,7 @@
                     "OPENAI_API_KEY": "",
                     "OPENAI_BASE_URL": "",
                     "temperature": 0.3,
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "log_path": "logs/Judge"
                 },
                 "toolkit": {},
