--- a/examples/debate/generated_config.json
+++ b/examples/debate/generated_config.json
@@ -15,7 +15,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person1",
                     "API_KEY": "",
@@ -37,7 +37,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person2",
                     "API_KEY": "",
@@ -59,7 +59,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person3",
                     "API_KEY": "",
@@ -81,7 +81,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person4",
                     "API_KEY": "",
@@ -103,7 +103,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person5",
                     "API_KEY": "",
@@ -125,7 +125,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person6",
                     "API_KEY": "",
@@ -147,7 +147,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person7",
                     "API_KEY": "",
@@ -169,7 +169,7 @@
                 "agent_description": null,
                 "LLM_config": {
                     "LLM_type": "OpenAI",
-                    "model": "gpt-4-turbo-2024-04-09",
+                    "model": "gpt-4o-2024-08-06",
                     "temperature": 0.3,
                     "log_path": "logs/Person8",
                     "API_KEY": "",
